--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@
     <!-- script information  -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="home.js"></script>
-    <!-- <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool/disable-devtool.min.js'></script> -->
+    <script
+      disable-devtool-auto
+      src="https://cdn.jsdelivr.net/npm/disable-devtool/disable-devtool.min.js"
+    ></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
